--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -131,7 +131,6 @@ transform(-1000px, 0);*/
   border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
   border-radius: 4px;
-  display: inline-block;
   /*position: relative;
   top: 2px;*/
   margin-left: -4px;
@@ -167,9 +166,9 @@ transform(-1000px, 0);*/
   top: -3.8px;
   display: inline-block;
 }
-#indexNavBar #backLink a {
+#indexNavBar #backLink span {
   position: relative;
-  top: 0.8px;
+  top: 1.8px;
 }
 
 #indexNavBar .link-xs {
@@ -388,7 +387,7 @@ a.btn {
 }
 .form-control {
   font-size: 16px;
-  height: 39px;
+  height: 36px;
 }
 .form-group .help-block {
   font-size: 0.95em;
@@ -637,7 +636,7 @@ input.clinic {
   background-color: #FFF;
 }
 #userSessionReportDetailHeader span.glyphicon-user {
-  top: -0.1px;
+  top: -0.01px;
 }
 #userSessionReportDetailHeader span.glyphicon:hover {
   color: #979a8d;
@@ -939,7 +938,7 @@ table.profile-audit-log TH,
 .checkbox-inline input[type=checkbox],
 .radio input[type=radio],
 .radio-inline input[type=radio] {
-  margin-top: 6px;
+  margin-top: 4px;
 }
 div.modal-header,
 div.modal-footer {
@@ -1051,6 +1050,10 @@ a.btn-delete {
 div.input-group.date {
   margin-top: -2px;
 }
+
+.indent {
+  padding: 0 1em;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -1107,9 +1110,7 @@ div.input-group.date {
   #indexNavBar span.glyphicon {
     margin-left: -2px;
   }
-  #indexNavBar #backLink a {
-    top: -0.1px;
-  }
+  
   #indexNavBar span.index-list {
     display: inline-block;
   }
@@ -1142,7 +1143,7 @@ div.input-group.date {
   .checkbox-inline input[type=checkbox],
   .radio input[type=radio],
   .radio-inline input[type=radio] {
-    margin-top: 2px;
+    margin-top: 4px;
   }
   table.profile-audit-log {
     font-size: 0.7em;
@@ -1187,6 +1188,9 @@ div.input-group.date {
   }
   #profileForm div.name-section {
     height: 10em;
+  }
+  #userSessionReportDetailHeader span.glyphicon-user {
+    padding: 0.4em;
   }
 }
 @media (max-width: 730) {
@@ -1244,7 +1248,7 @@ div.input-group.date {
     height: 10em;
   }
   .side {
-    height: 34em;
+    height: 35em;
   }
   .load-container {
     min-height: 1.5em;
@@ -1294,7 +1298,7 @@ div.input-group.date {
     margin: 0 0 15px 15px;
   }
   .form-group input[type=checkbox] {
-    margin-top: 5px;
+    margin-top: 4px;
   }
   .form-group input[type=radio] {
     margin-top: 4px;
