--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -145,9 +145,9 @@ transform(-1000px, 0);*/
   top: -3.8px;
   display: inline-block;
 }
-#indexNavBar #backLink a {
+#indexNavBar #backLink span {
   position: relative;
-  top: 0.8px;
+  top: 1.8px;
 }
 #indexNavBar .link-xs {
   margin-left: 8px;
@@ -365,7 +365,7 @@ btn {
 }
 .form-control {
   font-size: 16px;
-  height: 39px;
+  height: 36px;
 }
 .form-group .help-block {
   font-size: 0.95em;
@@ -606,6 +606,7 @@ input.clinic {
 }
 #userSessionReportDetailHeader span.glyphicon-user {
   top: -0.1px;
+  padding: 0.64em;
 }
 #userSessionReportDetailHeader span.glyphicon:hover {
   color: #979a8d;
@@ -906,6 +907,7 @@ table.profile-audit-log TH,
 .radio input[type=radio],
 .radio-inline input[type=radio] {
   /*margin-top:6px;*/
+  margin-top: 4px;
 }
 div.modal-header,
 div.modal-footer {
@@ -1024,6 +1026,12 @@ div.input-group.date {
   width: 60%;
   max-width: 100%;
 }
+
+.indent {
+  padding: 0 1em;
+}
+
+
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -1060,7 +1068,7 @@ div.input-group.date {
   .create-user-link {
     font-size: 0.95em;
   }
-  
+
   #backLink a {
     position: relative;
     top: -1px;
@@ -1114,7 +1122,7 @@ div.input-group.date {
   .checkbox-inline input[type=checkbox],
   .radio input[type=radio],
   .radio-inline input[type=radio] {
-    margin-top: 2px;
+    margin-top: 4px;
   }
   table.profile-audit-log {
     font-size: 0.7em;
@@ -1159,6 +1167,9 @@ div.input-group.date {
   }
   #profileForm div.name-section {
     height: 10em;
+  }
+  #userSessionReportDetailHeader span.glyphicon-user {
+    padding: 0.4em;
   }
 }
 @media (max-width: 730) {
@@ -1210,13 +1221,14 @@ div.input-group.date {
     margin-bottom: 4px;
   }
   #profileForm #bdGroup div.row {
-    height: 10em;
+    height: 12em;
   }
+
   #profileForm div.name-section {
     height: 10em;
   }
   .side {
-    height: 34em;
+    height: 35em;
   }
   .load-container {
     min-height: 1.5em;
@@ -1323,6 +1335,13 @@ div.input-group.date {
     height: 4em;
   }
 }
+
+@media (max-width: 1300px) {
+  #fullSizeBox {
+    height: 680px;
+  }
+}
+
 @media (min-width: 1400px) {
   html,
   body {
