put the forgot your password link back to login page

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -30,7 +30,7 @@ body {
 #fullSizeBox a[href*="register"] {
   display: none;
 }
-#fullSizeBox a[href*="go"] {
+#fullSizeBox a[href^="/go"] {
   display: none;
 }
 #fullSizeBox a[href*="google"] {
