--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -55,7 +55,7 @@ body {
   a[href*="register"] {
     display: none;
   }
-  a[href*="go"] {
+  a[href^="/go"] {
     display: none;
   }
   a[href*="google"] {
